<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/constraintLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_char"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:background="@color/light_gray"
        android:text="@string/tv_char"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_num_of_char"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:background="@color/light_gray"
        android:text="@string/tv_num_of_char"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_char"
        app:layout_constraintStart_toStartOf="@+id/tv_char"
        app:layout_constraintTop_toBottomOf="@+id/tv_char" />

    <RadioGroup
        android:id="@+id/rg_password_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_char"
        app:layout_constraintStart_toEndOf="@+id/tv_char"
        app:layout_constraintTop_toTopOf="@+id/tv_char">

        <RadioButton
            android:id="@+id/rb_alphanumeric"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_alphanumeric" />

        <RadioButton
            android:id="@+id/rb_alphanumeric_and_symbol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_alphanumeric_and_symbol" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/rg_num_of_char"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/tv_num_of_char"
        app:layout_constraintStart_toStartOf="@+id/rg_password_type"
        app:layout_constraintTop_toTopOf="@+id/tv_num_of_char">

        <RadioButton
            android:id="@+id/rb_8_char"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_8_char" />

        <RadioButton
            android:id="@+id/rb_12_char"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_12_char" />

        <RadioButton
            android:id="@+id/rb_16_char"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rb_16_char" />
    </RadioGroup>

    <Button
        android:id="@+id/bt_generate"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/bt_generate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <GridView
        android:id="@+id/gv_passwords"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:numColumns="2"
        app:layout_constraintBottom_toTopOf="@+id/bt_generate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_num_of_char" />

</androidx.constraintlayout.widget.ConstraintLayout>